// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniParcColumnConfiguration component should render column "CDD": CDD 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "Gene3D": Gene3D 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "HAMAP": HAMAP 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "PANTHER": PANTHER 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "PIRSF": PIRSF 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "PRINTS": PRINTS 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "PROSITE": PROSITE 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "Pfam": Pfam 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <span
        title="Virion membrane protein, poxvirus L1-related"
      >
        <a
          class="external-link"
          href="//pfam.xfam.org/family/PF02442"
          rel="noopener"
          target="_blank"
        >
          PF02442
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
         ( 
        <a
          class="external-link"
          href="https://www.ebi.ac.uk/interpro/entry/InterPro/IPR003472/"
          rel="noopener"
          target="_blank"
        >
          IPR003472
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
        )
      </span>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "SFLD": SFLD 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "SMART": SMART 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "SUPFAM": SUPFAM 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "TIGRFAMs": TIGRFAMs 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "accession": accession 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/uniprotkb/P07612"
      >
        <span
          class="entry-title__status icon--reviewed"
          title="This marks a reviewed UniProtKB entry"
        >
          <test-file-stub />
        </span>
        P07612
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/P07612"
      >
        <span
          class="entry-title__status icon--reviewed"
          title="This marks a reviewed UniProtKB entry"
        >
          <test-file-stub />
        </span>
        P07612.1 (obsolete)
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/A0A2I2MDI1"
      >
        <span
          class="entry-title__status icon--unreviewed"
          title="This marks an unreviewed UniProtKB entry"
        >
          <test-file-stub />
        </span>
        A0A2I2MDI1
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/A0A7I8V511"
      >
        <span
          class="entry-title__status icon--unreviewed"
          title="This marks an unreviewed UniProtKB entry"
        >
          <test-file-stub />
        </span>
        A0A7I8V511
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/Q0GNZ6"
      >
        <span
          class="entry-title__status icon--unreviewed"
          title="This marks an unreviewed UniProtKB entry"
        >
          <test-file-stub />
        </span>
        Q0GNZ6
      </a>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        4 more entries
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "accession": accession-expanded 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/uniprotkb/P07612"
      >
        <span
          class="entry-title__status icon--reviewed"
          title="This marks a reviewed UniProtKB entry"
        >
          <test-file-stub />
        </span>
        P07612
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/P07612"
      >
        <span
          class="entry-title__status icon--reviewed"
          title="This marks a reviewed UniProtKB entry"
        >
          <test-file-stub />
        </span>
        P07612.1 (obsolete)
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/A0A2I2MDI1"
      >
        <span
          class="entry-title__status icon--unreviewed"
          title="This marks an unreviewed UniProtKB entry"
        >
          <test-file-stub />
        </span>
        A0A2I2MDI1
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/A0A7I8V511"
      >
        <span
          class="entry-title__status icon--unreviewed"
          title="This marks an unreviewed UniProtKB entry"
        >
          <test-file-stub />
        </span>
        A0A7I8V511
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/Q0GNZ6"
      >
        <span
          class="entry-title__status icon--unreviewed"
          title="This marks an unreviewed UniProtKB entry"
        >
          <test-file-stub />
        </span>
        Q0GNZ6
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/Q6RZL4"
      >
        <span
          class="entry-title__status icon--unreviewed"
          title="This marks an unreviewed UniProtKB entry"
        >
          <test-file-stub />
        </span>
        Q6RZL4
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/Q71TT2"
      >
        <span
          class="entry-title__status icon--unreviewed"
          title="This marks an unreviewed UniProtKB entry"
        >
          <test-file-stub />
        </span>
        Q71TT2
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/Q76QK2"
      >
        <span
          class="entry-title__status icon--unreviewed"
          title="This marks an unreviewed UniProtKB entry"
        >
          <test-file-stub />
        </span>
        Q76QK2
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/Q76ZT7"
      >
        <span
          class="entry-title__status icon--unreviewed"
          title="This marks an unreviewed UniProtKB entry"
        >
          <test-file-stub />
        </span>
        Q76ZT7.1 (obsolete)
      </a>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        Less entries
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "checksum": checksum 1`] = `
<DocumentFragment>
  28FE89850863372D
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "first_seen": first_seen 1`] = `
<DocumentFragment>
  <time
    datetime="1988-11-01T00:00:00.000Z"
  >
    1988-11-01
  </time>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "from": from 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "gene": gene 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      VACWR088
    </li>
    <li>
      L1R
    </li>
    <li>
      VACV VK01 RKI-115 CDS
    </li>
    <li>
      RPXV077
    </li>
    <li>
      N1R
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        13 more gene names
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "gene": gene-expanded 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      VACWR088
    </li>
    <li>
      L1R
    </li>
    <li>
      VACV VK01 RKI-115 CDS
    </li>
    <li>
      RPXV077
    </li>
    <li>
      N1R
    </li>
    <li>
      CPXV_FIN2000_MAN_093
    </li>
    <li>
      VACV_TT8_108
    </li>
    <li>
      VACV_TT12_108
    </li>
    <li>
      VAC_TKT3_078
    </li>
    <li>
      VAC_TKT4_078
    </li>
    <li>
      VACV_IOC_B141_114
    </li>
    <li>
      VACV_IOC_B388_114
    </li>
    <li>
      LIVPclone14_096
    </li>
    <li>
      VACV_VK01_RKI-115
    </li>
    <li>
      VACV_VK02_RKI-092
    </li>
    <li>
      HSPV_VK05_RKI-089
    </li>
    <li>
      VACV_VK08_RKI-108
    </li>
    <li>
      VACV_VK12_RKI-121
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        Less gene names
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "last_seen": last_seen 1`] = `
<DocumentFragment>
  <time
    datetime="2021-06-02T00:00:00.000Z"
  >
    2021-06-02
  </time>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "length": length 1`] = `
<DocumentFragment>
  250
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "organism": organism 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/taxonomy/10254"
        title="Vaccinia virus (strain Western Reserve) (VACV), taxon ID 10254"
      >
        Vaccinia virus (strain Western Reserve) (VACV)
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/9606"
        title="Homo sapiens (Human), taxon ID 9606"
      >
        Homo sapiens (Human)
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/397342"
        title="Horsepox virus (HSPV), taxon ID 397342"
      >
        Horsepox virus (HSPV)
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/32606"
        title="Rabbitpox virus, taxon ID 32606"
      >
        Rabbitpox virus
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/10245"
        title="Vaccinia virus, taxon ID 10245"
      >
        Vaccinia virus
      </a>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        2 more organisms
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "organism": organism-expanded 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/taxonomy/10254"
        title="Vaccinia virus (strain Western Reserve) (VACV), taxon ID 10254"
      >
        Vaccinia virus (strain Western Reserve) (VACV)
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/9606"
        title="Homo sapiens (Human), taxon ID 9606"
      >
        Homo sapiens (Human)
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/397342"
        title="Horsepox virus (HSPV), taxon ID 397342"
      >
        Horsepox virus (HSPV)
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/32606"
        title="Rabbitpox virus, taxon ID 32606"
      >
        Rabbitpox virus
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/10245"
        title="Vaccinia virus, taxon ID 10245"
      >
        Vaccinia virus
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/10243"
        title="Cowpox virus (CPV), taxon ID 10243"
      >
        Cowpox virus (CPV)
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/32630"
        title="synthetic construct, taxon ID 32630"
      >
        synthetic construct
      </a>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        Less organisms
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "organism_id": organism_id 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/taxonomy/10254"
        title="Vaccinia virus (strain Western Reserve) (VACV), taxon ID 10254"
      >
        10254
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/9606"
        title="Homo sapiens (Human), taxon ID 9606"
      >
        9606
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/397342"
        title="Horsepox virus (HSPV), taxon ID 397342"
      >
        397342
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/32606"
        title="Rabbitpox virus, taxon ID 32606"
      >
        32606
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/10245"
        title="Vaccinia virus, taxon ID 10245"
      >
        10245
      </a>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        2 more organisms
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "organism_id": organism_id-expanded 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/taxonomy/10254"
        title="Vaccinia virus (strain Western Reserve) (VACV), taxon ID 10254"
      >
        10254
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/9606"
        title="Homo sapiens (Human), taxon ID 9606"
      >
        9606
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/397342"
        title="Horsepox virus (HSPV), taxon ID 397342"
      >
        397342
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/32606"
        title="Rabbitpox virus, taxon ID 32606"
      >
        32606
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/10245"
        title="Vaccinia virus, taxon ID 10245"
      >
        10245
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/10243"
        title="Cowpox virus (CPV), taxon ID 10243"
      >
        10243
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/32630"
        title="synthetic construct, taxon ID 32630"
      >
        32630
      </a>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        Less organisms
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "protein": protein 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      Protein L1
    </li>
    <li>
      IMV membrane protein
    </li>
    <li>
      Polyprotein
    </li>
    <li>
      HSPV089
    </li>
    <li>
      RPXV077
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        8 more protein names
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "protein": protein-expanded 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      Protein L1
    </li>
    <li>
      IMV membrane protein
    </li>
    <li>
      Polyprotein
    </li>
    <li>
      HSPV089
    </li>
    <li>
      RPXV077
    </li>
    <li>
      L1R
    </li>
    <li>
      Myristylated MP IMV
    </li>
    <li>
      Neutralizing antibody IMV membrane protein target
    </li>
    <li>
      Neutralizing antibody MV membrane protein
    </li>
    <li>
      F2 polypeptide
    </li>
    <li>
      N1R protein
    </li>
    <li>
      Hypothetical protein
    </li>
    <li>
      Putative L1R
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        Less protein names
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "proteome": proteome 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/proteomes/UP000000344"
      >
        UP000000344
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000166173"
      >
        UP000166173
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000111173"
      >
        UP000111173
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000113999"
      >
        UP000113999
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000181229"
      >
        UP000181229
      </a>
       (Genome)
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        9 more proteomes
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "proteome": proteome-expanded 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/proteomes/UP000000344"
      >
        UP000000344
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000166173"
      >
        UP000166173
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000111173"
      >
        UP000111173
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000113999"
      >
        UP000113999
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000181229"
      >
        UP000181229
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000181062"
      >
        UP000181062
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000181110"
      >
        UP000181110
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000153808"
      >
        UP000153808
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000097422"
      >
        UP000097422
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000181484"
      >
        UP000181484
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000315999"
      >
        UP000315999
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000137384"
      >
        UP000137384
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000501395"
      >
        UP000501395
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000274976"
      >
        UP000274976
      </a>
       (Genome)
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        Less proteomes
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "sequence": sequence 1`] = `
<DocumentFragment>
  <section
    class="sequence-container"
  >
    <div
      class="sequence"
    >
      <span
        class="sequence__chunk"
      >
        MGAAASIQTT
      </span>
      <span
        class="sequence__chunk"
      >
        VNTLSERISS
      </span>
      <span
        class="sequence__chunk"
      >
        KLEQEANASA
      </span>
      <span
        class="sequence__chunk"
      >
        QTKCDIEIGN
      </span>
      <span
        class="sequence__chunk"
      >
        FYIRQNHGCN
      </span>
      <span
        class="sequence__chunk"
      >
        LTVKNMCSAD
      </span>
      <span
        class="sequence__chunk"
      >
        ADAQLDAVLS
      </span>
      <span
        class="sequence__chunk"
      >
        AATETYSGLT
      </span>
      <span
        class="sequence__chunk"
      >
        PEQKAYVPAM
      </span>
      <span
        class="sequence__chunk"
      >
        FTAALNIQTS
      </span>
      <span
        class="sequence__chunk"
      >
        VNTVVRDFEN
      </span>
      <span
        class="sequence__chunk"
      >
        YVKQTCNSSA
      </span>
      <span
        class="sequence__chunk"
      >
        VVDNKLKIQN
      </span>
      <span
        class="sequence__chunk"
      >
        VIIDECYGAP
      </span>
      <span
        class="sequence__chunk"
      >
        GSPTNLEFIN
      </span>
      <span
        class="sequence__chunk"
      >
        TGSSKGNCAI
      </span>
      <span
        class="sequence__chunk"
      >
        KALMQLTTKA
      </span>
      <span
        class="sequence__chunk"
      >
        TTQIAPKQVA
      </span>
      <span
        class="sequence__chunk"
      >
        GTGVQFYMIV
      </span>
      <span
        class="sequence__chunk"
      >
        IGVIILAALF
      </span>
      <span
        class="sequence__chunk"
      >
        MYYAKRMLFT
      </span>
      <span
        class="sequence__chunk"
      >
        STNDKIKLIL
      </span>
      <span
        class="sequence__chunk"
      >
        ANKENVHWTT
      </span>
      <span
        class="sequence__chunk"
      >
        YMDTFFRTSP
      </span>
      <span
        class="sequence__chunk sequence__chunk--display-last"
      >
        MVIATTDMQN
      </span>
    </div>
  </section>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "upi": upi 1`] = `
<DocumentFragment>
  <span
    class="no-wrap accession-view"
  >
    <a
      class="accession"
      href="/uniparc/UPI0000000001/entry"
    >
      UPI0000000001
    </a>
  </span>
</DocumentFragment>
`;
